--- a/index.html
+++ b/index.html
@@ -282,7 +282,10 @@
         
        <p> 
           <h4>1. Chi-square Distribution and Goodness-of-fit Test</h4>
-           
+            <p><font color ="navy"><b>Lecture Note:</b></font> 
+                |<a href="module03-Chisq-Goodness-of-fit.html" target="popup"  onclick="window.open('module03-Chisq-Goodness-of-fit.html', 'name','width=900,height=500')"><font color ="blue">HTML</font></a>|
+         <a href="module03-Chisq-Goodness-of-fit.pdf" target="popup"  onclick="window.open('module03-Chisq-Goodness-of-fit.pdf', 'name','width=900,height=500')"><font color ="blue">PDF</font></a>|    
+            </p>  
             <ul>
              <li>Chi-square Distribution</li>
                <ul>
@@ -316,6 +319,10 @@
                 </ul>
             </ul>    
           <h4>2. Chi-square Test of Independence</h4>
+         <p><font color ="navy"><b>Lecture Note:</b></font> 
+                |<a href="module04-Chisq-Test-Independence.html" target="popup"  onclick="window.open('module04-Chisq-Test-Independence.html', 'name','width=900,height=500')"><font color ="blue">HTML</font></a>|
+         <a href="module04-Chisq-Test-Independence.pdf" target="popup"  onclick="window.open('module04-Chisq-Test-Independence.pdf', 'name','width=900,height=500')"><font color ="blue">PDF</font></a>|    
+            </p>  
             <ul>
               <li>Study Designs</li>
                 <ul>
