--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
       
      <!-- Work Experience -->
     <div id="week04" class="section">
-      <h2>Week 4: Principles of Experiments and Analysis of Variance (ANOVA)</h2>
+      <h2>Week 4: Principles of Experimental Designs and Analysis of Variance (ANOVA)</h2>
                    <center><font color = "red"><b>Zoom Office Hours</b>: Tuesday/Wednesday/Thursday 1:30 PM - 3:00 PM</font></center>
       <p>
     
