--- a/index.html
+++ b/index.html
@@ -437,8 +437,8 @@
             </ul>
            
             <ul>                    
-               <li><font color ="red"><b>Answer Key and Summary of Exam #1:</b></font> |<a href="WeeklyExam/Exam03-key.pdf" target="popup"  onclick="window.open('WeeklyExam/Exam03-key.pdf', 'name','width=900,height=500')"><font color ="blue">PDF</font></a>| </li>
-              </ul-->  
+               <li><font color ="red"><b>Answer Key and Summary:</b></font> |<a href="WeeklyExam/Exam03-key.pdf" target="popup"  onclick="window.open('WeeklyExam/Exam03-key.pdf', 'name','width=900,height=500')"><font color ="blue">PDF</font></a>| </li>
+              </ul>  
        </p>
     </div>   
       
