--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                    <center><font color = "red"><b>Zoom Office Hours</b>: Tuesday/Wednesday/Thursday 1:30 PM - 3:00 PM</font></center>
       <p>
     
-       <h4>1. Principles of Experiment</h4>
+       <h4>1. Principles of Experimental Designs</h4>
           <p><font color ="navy"><b>Lecture Note:</b></font> 
                 |<a href="module07-DOE.html" target="popup"  onclick="window.open('module07-DOE.html', 'name','width=900,height=500')"><font color ="blue">HTML</font></a>|
                  <a href="module07-DOE.pdf" target="popup"  onclick="window.open('module07-DOE.pdf', 'name','width=900,height=500')"><font color ="blue">PDF</font></a>|    
@@ -227,15 +227,15 @@
             <ul>
                <li>Rationale and Logical Process of Experimental Design</li>
                <ul>
-                  <li>Research Questions and Objective: Setting up hypotheses</li>
-                  <li>Identify the response variable and factor variables</li>
-                  <li>Commonly Used Experimental Designs</li>
+                  <li>Research questions and objective: Ssetting up hypotheses</li>
+                  <li>Identify the response variable and Factor variables</li>
+                  <li>Commonly used experimental designs</li>
                    <!--ul>
                       <li><b>Completely Randomized Design (CRD)</b></li>
                       <li><b>Randomly Block Designs (RBD) with and without replicates</b></li>
                    </ul-->
-                  <li>Roles of Randomization, Blinding, and Assignment of Experimental Units</li>
-                   <li>Sampling Plans and Data Collection</li>
+                  <li>Roles of randomization, blinding, and assignment of experimental units</li>
+                   <li>Sampling plans and data collection</li>
                      <ul>
                          <li>Simple random sampling</li>
                          <li>Stratified sampling</li>
