--- a/index.html
+++ b/index.html
@@ -271,8 +271,8 @@
           
         <h4>3. Final Exam: <font color = "red">Sunday 3:30 PM - 5:30 PM, 08/03/2025</font></h4>
          <ul>
-             <li> <b>Open</b>: Sunday at 3:30 PM <font color = "red">(Starting time for <b>everyone</b></font>!)</li>
-             <li> <b>Close</b>: Sunday at 5:30 PM <font color = "red">(students who have submitted accommodations through OEA: 6:30 PM)</font></li>
+             <li> <b>Open</b>: Sunday at 3:30 PM <font color = "red">(starting time for <b>everyone</b>!)</font></li>
+             <li> <b>Close</b>: Sunday at 5:30 PM <font color = "red">(6:30 PM for students who have submitted accommodations through OEA)</font></li>
             <li><b>Guideline</b>: |<a href="Exam05Info.pdf" target="popup"  onclick="window.open('Exam05Info.pdf', 'name','width=900,height=500')"><font color ="blue">PDF</font></a>| </li>
             </ul> 
                
